SUBDIRS = glade

EXTRA_DIST = AddIn.xsd \
StringResources.fr.resources \
BitmapResources.resources \
StringResources.goisern.resources \
StringResources.it.resources \
StringResources.jp.resources \
SplashScreen.png \
StringResources.kr.resources \
StringResources.bg.resources \
StringResources.nl.resources \
StringResources.br.resources \
StringResources.pl.resources \
StringResources.cn-big.resources \
StringResources.pt.resources \
StringResources.cn-gb.resources \
StringResources.resources \
StringResources.cz.resources \
StringResources.ro.resources \
StringResources.de.resources \
StringResources.ru.resources \
StringResources.dk.resources \
StringResources.se.resources \
StringResources.es.resources
